tetrate/tis1702/e2e/tls-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-tls-secret
  namespace: default
type: kubernetes.io/tls
data:
  # Base64 encoded certificate
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVVG9wZXZVL2VqYXoxb2JWVUtBcHprRkJvRGpvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3SGhjTk1qVXdNakkxTVRNd09EVTRXaGNOTWpZdwpNakkxTVRNd09EVTRXakFXTVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQZFpYT2RvNHROZFBiNWRmd2ZrL0E3aUw1NUY0Z1NTRjgwU0Uwek8KVG5Uc1hTY1ZsMHNBdEV6bXBvenB2RTNaTUg0eVh1OUFxLzM3T042bktXOE5WdkRoekFHTytoc3JQcG54aGxFQgpWWVgvOFM5RWJkeDJUa [...]
  # Base64 encoded private key
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRDNXVnpuYU9MVFhUMisKWFg4SDVQd080aStlUmVJRWtoZk5FaE5Nems1MDdGMG5GWmRMQUxSTTVxYU02YnhOMlRCK01sN3ZRS3Y5K3pqZQpweWx2RFZidzRjd0Jqdm9iS3o2WjhZWlJBVldGLy9FdlJHM2NkazVFblRiV2NJSE1HRENMUHRsaGRsVVEvMWRDCk54Y3ZKYmhJc3duU0N1REdzcnEvZFlBajJHMmp6SHFBRmxLTFFRUTRuQ1M4QllnZ1hxVWdISlc1TEJRdGtiSU0KTGt0cmFjTWRwVXN2OEprSitRR2dGaXlrOXoxWXdOcndvU3h1S2VZVjhrQmVOTFVWelN6ckV1UkJoUW13S2hXZQpDRXRBdi9SWlF4bmhiN [...]
