tetrate/tis1702/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-fips-tls-settings
spec:
  validationFailureAction: Enforce
