tetrate/tis1702/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-fips-tls-settings
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: create-tls-secret
      try:
        - apply:
            file: tls-secret.yaml

    - name: apply-kyverno-policy
      try:
        - apply:
            file: ../restrict-fips-tls-settings.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource-1.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource-2.yaml
